objects/dlrs__LookupChild__c.object
<CustomObject>
    <fields>
        <fullName>dlrs__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dlrs__Color__c</fullName>
        <label>Color</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Blue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dlrs__Description2__c</fullName>
        <label>Description 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dlrs__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dlrs__LookupParent2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lookup Parent 2</label>
        <referenceTo>dlrs__LookupParent__c</referenceTo>
        <relationshipLabel>Lookup Children (Lookup Parent 2)</relationshipLabel>
        <relationshipName>LookupChildren2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dlrs__LookupParent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lookup Parent</label>
        <referenceTo>dlrs__LookupParent__c</referenceTo>
        <relationshipLabel>Lookup Children</relationshipLabel>
        <relationshipName>LookupChildren</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Lookup Child</label>
    <nameField>
        <label>Lookup Child Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lookup Children</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>